Use alt translation

--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -252,7 +252,7 @@ help_page:
         d’authentification et sur davantage de caractéristiques des comptes.
       image: /assets/img/help/create-account.svg
       slug: create-account
-      title: Créer un compte
+      title: Créer mon compte
       url: /fr/help/create-account/overview/
     - description: Mot de passe oublié ? Compte verrouillé ? Nous vous aiderons à
         résoudre les problèmes d’accès.
