--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -222,7 +222,7 @@ help_page:
     - description: 设立你的账户了解身份证实选项以及账户的更多特点。
       image: /assets/img/help/create-account.svg
       slug: create-account
-      title: 设立账户
+      title: 设立我的账户
       url: /zh/help/create-account/overview/
     - description: 忘了你的密码? 被锁在了账户外？我们会帮你解决登录问题。
       image: /assets/img/help/trouble-signing-in.svg
