Add Online Retirement Application (ORA) to dropdown form

--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -86,6 +86,7 @@ contact_page:
       'Office of Personnel Management': Office of Personnel Management (OPM)
       'OPM Employee Express': OPM Employee Express
       'OPM FSAFEDS': OPM FSAFEDS
+      'OPM Retirement Services Online': OPM Retirement Services Online
       'OPM Services Online': 'OPM Services Online'
       'Pay.gov': Pay.gov
       'PBGC-MyPBA': 'PBGC - MyPBA'
