--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -87,6 +87,7 @@ contact_page:
       'Office of Personnel Management': Oficina de Administración del Personal (OPM)
       'OPM Employee Express': Employee Express de OPM
       'OPM FSAFEDS': OPM FSAFEDS
+      'OPM Retirement Services Online': Servicios de jubilación en línea de la OPM
       'OPM Services Online': Servicios en línea de OPM
       'Pay.gov': Pay.gov
       'PBGC-MyPBA': PBGC - MyPBA
