--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "concurrently": "^7.6.0",
     "core-js": "^3.29.1",
     "decap-cms": "^3.6.0",
+    "npm": "^11.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webpack": "^5.94.0",
