add online retirement application to dropdown menu

--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -84,6 +84,7 @@ contact_page:
       'National Oceanic and Atmospheric Administration (NOAA)': National Oceanic and Atmospheric Administration (NOAA)
       'National Transportation Safety Board (NTSB)': National Transportation Safety Board (NTSB)
       'Office of Personnel Management': Office of Personnel Management (OPM)
+      'Online Retirement Application (ORA)': Online Retirement Application (ORA)
       'OPM Employee Express': OPM Employee Express
       'OPM FSAFEDS': OPM FSAFEDS
       'OPM Services Online': 'OPM Services Online'
