--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -85,6 +85,7 @@ contact_page:
       'National Oceanic and Atmospheric Administration (NOAA)': Oficina Nacional de Administración Oceánica y Atmosférica (NOAA)
       'National Transportation Safety Board (NTSB)': Junta Nacional de Seguridad del Transporte (NTSB)
       'Office of Personnel Management': Oficina de Administración del Personal (OPM)
+      'Online Retirement Application (ORA)': Solicitud de Jubilación en Línea (ORA)
       'OPM Employee Express': Employee Express de OPM
       'OPM FSAFEDS': OPM FSAFEDS
       'OPM Services Online': Servicios en línea de OPM
