--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -88,6 +88,7 @@ contact_page:
       'National Oceanic and Atmospheric Administration (NOAA)': Administration nationale de l’atmosphère et des océans (NOAA)
       'National Transportation Safety Board (NTSB)': Bureau national de la sécurité des transports (NTSB)
       'Office of Personnel Management': Bureau de gestion du personnel (OPM)
+      'Online Retirement Application (ORA)': Demande de retraite en ligne (ORA)
       'OPM Employee Express': OPM Employee Express
       'OPM FSAFEDS': OPM FSAFEDS
       'OPM Services Online': Services en ligne de l’OPM
