--- a/_data/zh/settings.yml
+++ b/_data/zh/settings.yml
@@ -82,6 +82,7 @@ contact_page:
       'National Oceanic and Atmospheric Administration (NOAA)': 国家海洋和大气管理局（NOAA）
       'National Transportation Safety Board (NTSB)': 国家运输安全委员会
       'Office of Personnel Management': 联邦人事管理局（OPM）
+      'Online Retirement Application': 网上退休申请（ORA）
       'OPM Employee Express': OPM（联邦人事管理局）Employee Express
       'OPM FSAFEDS': OPM FSAFEDS
       'OPM Services Online': OPM（联邦人事管理局）Services Online
